<resources>
    <string name="app_name">Quiz AM</string>
    <string name="action_settings">Settings</string>
    <string name="action_best">Best results</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="number_of_choices">Liczba możliwości</string>
    <string name="default_furniture">Fotele</string>
    <string name="default_furniture_message">Musisz wybrać przynajmniej jedną kategorię. Jako domyślny wybrano fotele.</string>
    <string name="guess_furnitue">Jaki to mebel?</string>
    <string name="image_desciption">Obraz bieżącego mebla</string>
    <string name="incorrect_answer">Błąd!</string>
    <string name="number_of_choices_description">Wyświetla 2,4,6 lub 8 możliwości</string>
    <string name="question">Pytanie %1$d z %2$d</string>
    <string name="save_score">Zapisz wynik</string>
    <string name="ok">Zagraj ponownie</string>
    <string name="restarting_quiz">Quiz zostanie uruchomiony ponownie z nowymi ustawieniami</string>
    <string name="results">%1$d odpowiedzi, %2$.02f%% poprawnych</string>
    <string name="results2">%.2f%% poprawnych</string>
    <string name="furniture_categories">Kategorie</string>
    <string name="furniture_categories_description">Kategorie których ma dotyczyć quiz</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="dialogTitle2">Zapisz wynik</string>
    <string name="insertName">Wpisz nick</string>
    <string name="score">wyniki</string>
    <string name="ExitStr">Wyjdź</string>
    <string name="SaveStr">Zapisz</string>
    <string name="nowyRekodrd">Dodano nowy rekord</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
