<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment" >

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing"
        android:text="@string/question"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <ImageView
        android:id="@+id/furnitureImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activityHorizontalMargin"
        android:layout_marginRight="@dimen/activityHorizontalMargin"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_desciption"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/guessCountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/guess_furnitue"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <LinearLayout
        android:id="@+id/row1LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="Button"
            android:textColor="@color/button_text_color" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="Button"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="Button"
            android:textColor="@color/button_text_color" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="Button"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="Button"
            android:textColor="@color/button_text_color" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="Button"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="Button"
            android:textColor="@color/button_text_color" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="Button"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="@dimen/answerSize"
        android:textStyle="bold" />


</LinearLayout>